[package]

name = "bulkhead"
version = "0.0.1"
authors = ["John Barker <jebarker@gmail.com>"]

[dependencies]

hyper = "*"
iron = "*"
r2d2 = "*"
r2d2_postgres = "*"
router = "*"
rustc-serialize = "*"
time = "*"

[dependencies.postgres]

features = ["time"]
version = "*"

[dependencies.bodyparser]

git = "https://github.com/iron/body-parser.git"
